commit translated contents

--- a/docs/docs-ref-autogen/excel/excel.interfaces.rangeformatdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.rangeformatdata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: a3269a2a9977f0af91c8d071e809b57d7c61a85b
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: a61e6c13b458374f20fee9ed0826f557daa9cf6a
+ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26225873"
+ms.lasthandoff: 02/20/2019
+ms.locfileid: "30104931"
 items:
 - uid: excel.Excel.Interfaces.RangeFormatData
-  summary: 描述调用"rangeFormat.toJSON()"返回的数据的接口。
+  summary: 描述通过调用 "rangeFormat ()" 返回的数据的接口。
   name: Excel.Interfaces.RangeFormatData
   fullName: Excel.Interfaces.RangeFormatData
   langs:
@@ -15,24 +15,45 @@ items:
   type: interface
   package: excel
   children:
+  - excel.Excel.Interfaces.RangeFormatData.autoIndent
   - excel.Excel.Interfaces.RangeFormatData.borders
   - excel.Excel.Interfaces.RangeFormatData.columnWidth
   - excel.Excel.Interfaces.RangeFormatData.fill
   - excel.Excel.Interfaces.RangeFormatData.font
   - excel.Excel.Interfaces.RangeFormatData.horizontalAlignment
+  - excel.Excel.Interfaces.RangeFormatData.indentLevel
   - excel.Excel.Interfaces.RangeFormatData.protection
+  - excel.Excel.Interfaces.RangeFormatData.readingOrder
   - excel.Excel.Interfaces.RangeFormatData.rowHeight
+  - excel.Excel.Interfaces.RangeFormatData.shrinkToFit
   - excel.Excel.Interfaces.RangeFormatData.textOrientation
   - excel.Excel.Interfaces.RangeFormatData.useStandardHeight
   - excel.Excel.Interfaces.RangeFormatData.useStandardWidth
   - excel.Excel.Interfaces.RangeFormatData.verticalAlignment
   - excel.Excel.Interfaces.RangeFormatData.wrapText
+- uid: excel.Excel.Interfaces.RangeFormatData.autoIndent
+  summary: >-
+    指示当文本对齐方式设置为相等分布时, 文本是否自动缩进。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: autoIndent
+  fullName: autoIndent
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'autoIndent?: boolean;'
+    return:
+      type:
+      - boolean
 - uid: excel.Excel.Interfaces.RangeFormatData.borders
   summary: >-
     应用于整个区域的 Border 对象的集合。只读。
 
 
-    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   name: borders
   fullName: borders
   langs:
@@ -48,7 +69,7 @@ items:
     获取或设置区域内的所有列的宽度。如果列宽不统一，则返回 NULL。
 
 
-    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   name: columnWidth
   fullName: columnWidth
   langs:
@@ -64,7 +85,7 @@ items:
     返回在整个区域内定义的 fill 对象。只读。
 
 
-    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   name: fill
   fullName: fill
   langs:
@@ -80,7 +101,7 @@ items:
     返回在整个区域内定义的 Font 对象。只读。
 
 
-    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   name: font
   fullName: font
   langs:
@@ -93,10 +114,10 @@ items:
       - excel.Excel.Interfaces.RangeFontData
 - uid: excel.Excel.Interfaces.RangeFormatData.horizontalAlignment
   summary: >-
-    代表指定对象的水平对齐方式。 有关详细信息，请参阅 Excel.HorizontalAlignment。
+    代表指定对象的水平对齐方式。 有关详细信息, 请参阅 HorizontalAlignment。
 
 
-    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   name: horizontalAlignment
   fullName: horizontalAlignment
   langs:
@@ -107,12 +128,29 @@ items:
     return:
       type:
       - Excel.HorizontalAlignment | "General" | "Left" | "Center" | "Right" | "Fill" | "Justify" | "CenterAcrossSelection" | "Distributed"
+- uid: excel.Excel.Interfaces.RangeFormatData.indentLevel
+  summary: >-
+    0到250之间的一个整数, 它指示缩进级别。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: indentLevel
+  fullName: indentLevel
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'indentLevel?: number;'
+    return:
+      type:
+      - number
 - uid: excel.Excel.Interfaces.RangeFormatData.protection
   summary: >-
     返回某一区域的格式保护对象。只读。
 
 
-    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   name: protection
   fullName: protection
   langs:
@@ -123,12 +161,29 @@ items:
     return:
       type:
       - excel.Excel.Interfaces.FormatProtectionData
+- uid: excel.Excel.Interfaces.RangeFormatData.readingOrder
+  summary: >-
+    区域的阅读顺序。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: readingOrder
+  fullName: readingOrder
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'readingOrder?: Excel.ReadingOrder | "Context" | "LeftToRight" | "RightToLeft";'
+    return:
+      type:
+      - Excel.ReadingOrder | "Context" | "LeftToRight" | "RightToLeft"
 - uid: excel.Excel.Interfaces.RangeFormatData.rowHeight
   summary: >-
-    获取或设置范围中的所有行的高度。 如果行高不是统一的则将返回 null。
+    获取或设置区域中所有行的高度。 如果行高不一致, 则将返回 null。
 
 
-    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   name: rowHeight
   fullName: rowHeight
   langs:
@@ -139,12 +194,29 @@ items:
     return:
       type:
       - number
+- uid: excel.Excel.Interfaces.RangeFormatData.shrinkToFit
+  summary: >-
+    指示文本是否自动缩小以适合可用列宽。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: shrinkToFit
+  fullName: shrinkToFit
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'shrinkToFit?: boolean;'
+    return:
+      type:
+      - boolean
 - uid: excel.Excel.Interfaces.RangeFormatData.textOrientation
   summary: >-
-    获取或设置范围内的所有单元格的文本方向。 文本方向应为整数从-90 至 90 或 180 纵向文本。 如果不统一范围内的方向，则将返回 null。
+    获取或设置区域内的所有单元格的文本方向。 文本方向应为-90 到90之间的整数, 或者为180垂直方向的文本。 如果区域中的方向不一致, 则将返回 null。
 
 
-    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   name: textOrientation
   fullName: textOrientation
   langs:
@@ -157,10 +229,10 @@ items:
       - number
 - uid: excel.Excel.Interfaces.RangeFormatData.useStandardHeight
   summary: >-
-    确定 Range 对象的行高是否等于工作表的标准高度。 如果 Range 对象的行高等于工作表的标准高度，则返回 True。 如果区域包含多个行，并且不是行的高度相同，则返回 Null。 否则返回 False。
+    确定 Range 对象的行高是否等于工作表的标准行高。 如果 Range 对象的行高等于工作表的标准高度, 则返回 True。 如果区域包含多行, 并且行不是都具有相同的高度, 则返回 Null。 否则返回 False。
 
 
-    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   name: useStandardHeight
   fullName: useStandardHeight
   langs:
@@ -173,10 +245,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.RangeFormatData.useStandardWidth
   summary: >-
-    指示是否 Range 对象的列宽等于的工作表的标准列宽。 如果 Range 对象的列宽等于的工作表的标准列宽，则返回 True。 如果该区域包含多个列并且列不是高度相同，则返回 Null。 否则返回 False。
+    指示 Range 对象的列宽是否等于工作表的标准宽度。 如果 Range 对象的列宽等于工作表的标准宽度, 则返回 True。 如果区域中包含多个列, 并且各列的高度不相同, 则返回 Null。 否则返回 False。
 
 
-    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   name: useStandardWidth
   fullName: useStandardWidth
   langs:
@@ -189,10 +261,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.RangeFormatData.verticalAlignment
   summary: >-
-    代表指定对象的垂直对齐方式。 有关详细信息，请参阅 Excel.VerticalAlignment。
+    表示指定对象的垂直对齐方式。 有关详细信息, 请参阅 VerticalAlignment。
 
 
-    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   name: verticalAlignment
   fullName: verticalAlignment
   langs:
@@ -208,7 +280,7 @@ items:
     指示 Excel 是否将对象中的文本换行。指示整个区域不具有统一换行设置的空值
 
 
-    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   name: wrapText
   fullName: wrapText
   langs:
