--- a/docs/docs-ref-autogen/outlook_1_7/office.mailboxenums.recurrencetimezone.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/office.mailboxenums.recurrencetimezone.yml
@@ -1,18 +1,18 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: ae07d887ad084a70efe86e6a13318a6b20568f14
-ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
+ms.openlocfilehash: 4c9d22ef1ca1779e228807f88ae8295cc5529904
+ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/22/2018
-ms.locfileid: "26648288"
+ms.lasthandoff: 02/20/2019
+ms.locfileid: "30104945"
 items:
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone
   summary: >-
-    指定应用于定期所在的时区。
+    指定应用于定期的时区。
 
 
-    \[[API 集： 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-  remarks: <table><tr><td> [适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points) </td><td>撰写或阅读</td></tr></table>
+    \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+  remarks: <table> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写或阅读</td></tr> </table>
   name: Office.MailboxEnums.RecurrenceTimeZone
   fullName: Office.MailboxEnums.RecurrenceTimeZone
   langs:
@@ -165,7 +165,7 @@ items:
   type: field
   numericValue: "\"Afghanistan Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.AlaskanStandardTime
-  summary: 阿拉斯加标准时间
+  summary: Alaskan 标准时间
   name: AlaskanStandardTime
   fullName: AlaskanStandardTime
   langs:
@@ -173,7 +173,7 @@ items:
   type: field
   numericValue: "\"Alaskan Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.AleutianStandardTime
-  summary: Aleutian 标准时间
+  summary: 阿留申标准时间
   name: AleutianStandardTime
   fullName: AleutianStandardTime
   langs:
@@ -189,7 +189,7 @@ items:
   type: field
   numericValue: "\"Altai Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.ArabianStandardTime
-  summary: 阿拉伯标准时间
+  summary: 阿拉伯半岛标准时间
   name: ArabianStandardTime
   fullName: ArabianStandardTime
   langs:
@@ -237,7 +237,7 @@ items:
   type: field
   numericValue: "\"Atlantic Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.AUSCentralStandardTime
-  summary: 澳大利亚管理中心标准时间
+  summary: 澳大利亚中部标准时间
   name: AUSCentralStandardTime
   fullName: AUSCentralStandardTime
   langs:
@@ -245,7 +245,7 @@ items:
   type: field
   numericValue: "\"AUS Central Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.AusCentralW_StandardTime
-  summary: 澳大利亚中央西标准时间
+  summary: 澳大利亚中西部标准时间
   name: AusCentralW_StandardTime
   fullName: AusCentralW_StandardTime
   langs:
@@ -277,7 +277,7 @@ items:
   type: field
   numericValue: "\"Azores Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.BahiaStandardTime
-  summary: 巴伊亚标准时间
+  summary: Bahia 标准时间
   name: BahiaStandardTime
   fullName: BahiaStandardTime
   langs:
@@ -285,7 +285,7 @@ items:
   type: field
   numericValue: "\"Bahia Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.BangladeshStandardTime
-  summary: 孟加拉标准时间
+  summary: 孟加拉国标准时间
   name: BangladeshStandardTime
   fullName: BangladeshStandardTime
   langs:
@@ -333,7 +333,7 @@ items:
   type: field
   numericValue: "\"Caucasus Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.CenAustraliaStandardTime
-  summary: 管理中心澳大利亚标准时间
+  summary: 中部澳大利亚标准时间
   name: CenAustraliaStandardTime
   fullName: CenAustraliaStandardTime
   langs:
@@ -349,7 +349,7 @@ items:
   type: field
   numericValue: "\"Central America Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.CentralAsiaStandardTime
-  summary: 管理中心亚洲标准时间
+  summary: 中亚标准时间
   name: CentralAsiaStandardTime
   fullName: CentralAsiaStandardTime
   langs:
@@ -381,7 +381,7 @@ items:
   type: field
   numericValue: "\"Central Europe Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.CentralPacificStandardTime
-  summary: 管理中心太平洋标准时间
+  summary: 太平洋中部标准时间
   name: CentralPacificStandardTime
   fullName: CentralPacificStandardTime
   langs:
@@ -389,7 +389,7 @@ items:
   type: field
   numericValue: "\"Central Pacific Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.CentralStandardTime
-  summary: 管理中心标准时间
+  summary: 中部标准时间
   name: CentralStandardTime
   fullName: CentralStandardTime
   langs:
@@ -397,7 +397,7 @@ items:
   type: field
   numericValue: "\"Central Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.CentralStandardTime_Mexico
-  summary: 管理中心标准时间 （墨西哥）
+  summary: 中部标准时间 (墨西哥)
   name: CentralStandardTime_Mexico
   fullName: CentralStandardTime_Mexico
   langs:
@@ -429,7 +429,7 @@ items:
   type: field
   numericValue: "\"Cuba Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.DatelineStandardTime
-  summary: 国际日期变更线标准时间
+  summary: Dateline 标准时间
   name: DatelineStandardTime
   fullName: DatelineStandardTime
   langs:
@@ -437,7 +437,7 @@ items:
   type: field
   numericValue: "\"Dateline Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.E_AfricaStandardTime
-  summary: 非洲标准时间
+  summary: 东非标准时间
   name: E_AfricaStandardTime
   fullName: E_AfricaStandardTime
   langs:
@@ -445,7 +445,7 @@ items:
   type: field
   numericValue: "\"E. Africa Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.E_AustraliaStandardTime
-  summary: 东亚澳大利亚标准时间
+  summary: 澳大利亚东部标准时间
   name: E_AustraliaStandardTime
   fullName: E_AustraliaStandardTime
   langs:
@@ -453,7 +453,7 @@ items:
   type: field
   numericValue: "\"E. Australia Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.E_EuropeStandardTime
-  summary: 东亚欧洲标准时间
+  summary: 东欧标准时间
   name: E_EuropeStandardTime
   fullName: E_EuropeStandardTime
   langs:
@@ -461,7 +461,7 @@ items:
   type: field
   numericValue: "\"E. Europe Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.E_SouthAmericaStandardTime
-  summary: 东亚南美洲标准时间
+  summary: 东南美洲标准时间
   name: E_SouthAmericaStandardTime
   fullName: E_SouthAmericaStandardTime
   langs:
@@ -485,7 +485,7 @@ items:
   type: field
   numericValue: "\"Eastern Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.EasternStandardTime_Mexico
-  summary: 东部标准时间 （墨西哥）
+  summary: 东部标准时间 (墨西哥)
   name: EasternStandardTime_Mexico
   fullName: EasternStandardTime_Mexico
   langs:
@@ -501,7 +501,7 @@ items:
   type: field
   numericValue: "\"Egypt Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.EkaterinburgStandardTime
-  summary: 琳堡标准时间
+  summary: 叶标准时间
   name: EkaterinburgStandardTime
   fullName: EkaterinburgStandardTime
   langs:
@@ -517,7 +517,7 @@ items:
   type: field
   numericValue: "\"Fiji Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.FLEStandardTime
-  summary: 文件标准时间
+  summary: FLE 标准时间
   name: FLEStandardTime
   fullName: FLEStandardTime
   langs:
@@ -525,7 +525,7 @@ items:
   type: field
   numericValue: "\"FLE Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.GeorgianStandardTime
-  summary: 格鲁吉亚语的标准时间
+  summary: 格鲁吉亚标准时间
   name: GeorgianStandardTime
   fullName: GeorgianStandardTime
   langs:
@@ -533,7 +533,7 @@ items:
   type: field
   numericValue: "\"Georgian Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.GMTStandardTime
-  summary: 格林威治标准时间
+  summary: GMT 标准时间
   name: GMTStandardTime
   fullName: GMTStandardTime
   langs:
@@ -549,7 +549,7 @@ items:
   type: field
   numericValue: "\"Greenland Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.GreenwichStandardTime
-  summary: 则格林威治标准时间
+  summary: 格林尼治标准时间
   name: GreenwichStandardTime
   fullName: GreenwichStandardTime
   langs:
@@ -613,7 +613,7 @@ items:
   type: field
   numericValue: "\"Jordan Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.KaliningradStandardTime
-  summary: 加里宁格勒标准时间
+  summary: 加里加里的标准时间
   name: KaliningradStandardTime
   fullName: KaliningradStandardTime
   langs:
@@ -645,7 +645,7 @@ items:
   type: field
   numericValue: "\"Libya Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.LineIslandsStandardTime
-  summary: 行群岛标准时间
+  summary: 线形 Islands 标准时间
   name: LineIslandsStandardTime
   fullName: LineIslandsStandardTime
   langs:
@@ -653,7 +653,7 @@ items:
   type: field
   numericValue: "\"Line Islands Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.LordHoweStandardTime
-  summary: 勋爵豪标准时间
+  summary: Lord Howe 标准时间
   name: LordHoweStandardTime
   fullName: LordHoweStandardTime
   langs:
@@ -677,7 +677,7 @@ items:
   type: field
   numericValue: "\"Magallanes Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.MarquesasStandardTime
-  summary: 马克萨斯标准时间
+  summary: Marquesas 标准时间
   name: MarquesasStandardTime
   fullName: MarquesasStandardTime
   langs:
@@ -693,7 +693,7 @@ items:
   type: field
   numericValue: "\"Mauritius Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.MidAtlanticStandardTime
-  summary: 大西洋标准时间
+  summary: 中大西洋标准时间
   name: MidAtlanticStandardTime
   fullName: MidAtlanticStandardTime
   langs:
@@ -725,7 +725,7 @@ items:
   type: field
   numericValue: "\"Morocco Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.MountainStandardTime
-  summary: 山地标准时间
+  summary: 山区标准时间
   name: MountainStandardTime
   fullName: MountainStandardTime
   langs:
@@ -733,7 +733,7 @@ items:
   type: field
   numericValue: "\"Mountain Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.MountainStandardTime_Mexico
-  summary: 山地标准时间 （墨西哥）
+  summary: 山区标准时间 (墨西哥)
   name: MountainStandardTime_Mexico
   fullName: MountainStandardTime_Mexico
   langs:
@@ -749,7 +749,7 @@ items:
   type: field
   numericValue: "\"Myanmar Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.N_CentralAsiaStandardTime
-  summary: 北美管理中心亚洲标准时间
+  summary: 北部中亚标准时间
   name: N_CentralAsiaStandardTime
   fullName: N_CentralAsiaStandardTime
   langs:
@@ -789,7 +789,7 @@ items:
   type: field
   numericValue: "\"New Zealand Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.NorfolkStandardTime
-  summary: 诺福克标准时间
+  summary: 诺福克岛标准时间
   name: NorfolkStandardTime
   fullName: NorfolkStandardTime
   langs:
@@ -797,7 +797,7 @@ items:
   type: field
   numericValue: "\"Norfolk Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.NorthAsiaEastStandardTime
-  summary: 北美亚洲东部标准时间
+  summary: 北亚东部标准时间
   name: NorthAsiaEastStandardTime
   fullName: NorthAsiaEastStandardTime
   langs:
@@ -805,7 +805,7 @@ items:
   type: field
   numericValue: "\"North Asia East Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.NorthAsiaStandardTime
-  summary: 北美亚洲标准时间
+  summary: 北亚标准时间
   name: NorthAsiaStandardTime
   fullName: NorthAsiaStandardTime
   langs:
@@ -821,7 +821,7 @@ items:
   type: field
   numericValue: "\"North Korea Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.OmskStandardTime
-  summary: 鄂木斯克标准时间
+  summary: Omsk 标准时间
   name: OmskStandardTime
   fullName: OmskStandardTime
   langs:
@@ -829,7 +829,7 @@ items:
   type: field
   numericValue: "\"Omsk Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.PacificSAStandardTime
-  summary: SA 太平洋标准时间
+  summary: 太平洋南美标准时间
   name: PacificSAStandardTime
   fullName: PacificSAStandardTime
   langs:
@@ -845,7 +845,7 @@ items:
   type: field
   numericValue: "\"Pacific Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.PacificStandardTimeMexico
-  summary: 太平洋标准时间 （墨西哥）
+  summary: 太平洋标准时间 (墨西哥)
   name: PacificStandardTimeMexico
   fullName: PacificStandardTimeMexico
   langs:
@@ -877,7 +877,7 @@ items:
   type: field
   numericValue: "\"Romance Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.RussianStandardTime
-  summary: 俄语标准时间
+  summary: 俄罗斯标准时间
   name: RussianStandardTime
   fullName: RussianStandardTime
   langs:
@@ -885,7 +885,7 @@ items:
   type: field
   numericValue: "\"Russian Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.RussiaTimeZone10
-  summary: 俄罗斯所在的时区 10
+  summary: 俄罗斯时区10
   name: RussiaTimeZone10
   fullName: RussiaTimeZone10
   langs:
@@ -893,7 +893,7 @@ items:
   type: field
   numericValue: "\"Russia Time Zone 10\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.RussiaTimeZone11
-  summary: 俄罗斯所在的时区 11
+  summary: 俄罗斯时区11
   name: RussiaTimeZone11
   fullName: RussiaTimeZone11
   langs:
@@ -901,7 +901,7 @@ items:
   type: field
   numericValue: "\"Russia Time Zone 11\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.RussiaTimeZone3
-  summary: 俄罗斯所在的时区 3
+  summary: 俄罗斯时区3
   name: RussiaTimeZone3
   fullName: RussiaTimeZone3
   langs:
@@ -909,7 +909,7 @@ items:
   type: field
   numericValue: "\"Russia Time Zone 3\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.SAEasternStandardTime
-  summary: SA 东部标准时间
+  summary: 南美东部标准时间
   name: SAEasternStandardTime
   fullName: SAEasternStandardTime
   langs:
@@ -917,7 +917,7 @@ items:
   type: field
   numericValue: "\"SA Eastern Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.SaintPierreStandardTime
-  summary: 圣赫勒拿圣皮埃尔标准时间
+  summary: 圣皮埃尔标准时间
   name: SaintPierreStandardTime
   fullName: SaintPierreStandardTime
   langs:
@@ -925,7 +925,7 @@ items:
   type: field
   numericValue: "\"Saint Pierre Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.SakhalinStandardTime
-  summary: 萨哈林标准时间
+  summary: Sakhalin 标准时间
   name: SakhalinStandardTime
   fullName: SakhalinStandardTime
   langs:
@@ -941,7 +941,7 @@ items:
   type: field
   numericValue: "\"Samoa Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.SAPacificStandardTime
-  summary: SA 太平洋标准时间
+  summary: 南美洲太平洋标准时间
   name: SAPacificStandardTime
   fullName: SAPacificStandardTime
   langs:
@@ -957,7 +957,7 @@ items:
   type: field
   numericValue: "\"Saratov Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.SAWesternStandardTime
-  summary: SA 西部标准时间
+  summary: 南美西部标准时间
   name: SAWesternStandardTime
   fullName: SAWesternStandardTime
   langs:
@@ -965,7 +965,7 @@ items:
   type: field
   numericValue: "\"SA Western Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.SEAsiaStandardTime
-  summary: 东南方向亚洲标准时间
+  summary: 东南亚标准时间
   name: SEAsiaStandardTime
   fullName: SEAsiaStandardTime
   langs:
@@ -1021,7 +1021,7 @@ items:
   type: field
   numericValue: "\"Taipei Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.TasmaniaStandardTime
-  summary: 塔斯马尼亚标准时间
+  summary: 塔斯马尼亚岛标准时间
   name: TasmaniaStandardTime
   fullName: TasmaniaStandardTime
   langs:
@@ -1077,7 +1077,7 @@ items:
   type: field
   numericValue: "\"Turkey Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.TurksAndCaicosStandardTime
-  summary: 特克斯和凯科斯标准时间
+  summary: 特克斯和凯科斯群岛标准时间
   name: TurksAndCaicosStandardTime
   fullName: TurksAndCaicosStandardTime
   langs:
@@ -1117,7 +1117,7 @@ items:
   type: field
   numericValue: "\"UTC\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.UTCMINUS02
-  summary: 协调世界时 (UTC)-2 小时
+  summary: 协调通用时间 (UTC)-2 个小时
   name: UTCMINUS02
   fullName: UTCMINUS02
   langs:
@@ -1125,7 +1125,7 @@ items:
   type: field
   numericValue: "\"UTC-02\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.UTCMINUS08
-  summary: 协调世界时 (UTC)-8 小时
+  summary: 协调通用时间 (UTC)-8 小时
   name: UTCMINUS08
   fullName: UTCMINUS08
   langs:
@@ -1133,7 +1133,7 @@ items:
   type: field
   numericValue: "\"UTC-08\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.UTCMINUS09
-  summary: 协调世界时 (UTC)-9 个小时
+  summary: 协调通用时间 (UTC)-9 小时
   name: UTCMINUS09
   fullName: UTCMINUS09
   langs:
@@ -1141,7 +1141,7 @@ items:
   type: field
   numericValue: "\"UTC-09\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.UTCMINUS11
-  summary: 协调世界时 (UTC)-11 个小时
+  summary: 协调通用时间 (UTC)-11 小时
   name: UTCMINUS11
   fullName: UTCMINUS11
   langs:
@@ -1149,7 +1149,7 @@ items:
   type: field
   numericValue: "\"UTC-11\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.UTCPLUS12
-  summary: 协调世界时 (UTC) + 12 小时
+  summary: 协调通用时间 (UTC) + 12 小时
   name: UTCPLUS12
   fullName: UTCPLUS12
   langs:
@@ -1157,7 +1157,7 @@ items:
   type: field
   numericValue: "\"UTC+12\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.UTCPLUS13
-  summary: 协调世界时 (UTC) + 13 小时
+  summary: 协调通用时间 (UTC) + 13 小时
   name: UTCPLUS13
   fullName: UTCPLUS13
   langs:
@@ -1173,7 +1173,7 @@ items:
   type: field
   numericValue: "\"Venezuela Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.VladivostokStandardTime
-  summary: 符拉迪沃斯托克标准时间
+  summary: 符拉迪沃斯托克 (海参崴) 标准时间
   name: VladivostokStandardTime
   fullName: VladivostokStandardTime
   langs:
@@ -1181,7 +1181,7 @@ items:
   type: field
   numericValue: "\"Vladivostok Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.W_AustraliaStandardTime
-  summary: 西澳大利亚标准时间
+  summary: 澳大利亚西部标准时间
   name: W_AustraliaStandardTime
   fullName: W_AustraliaStandardTime
   langs:
@@ -1189,7 +1189,7 @@ items:
   type: field
   numericValue: "\"W. Australia Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.W_CentralAfricaStandardTime
-  summary: 中西非洲标准时间
+  summary: 中不西部标准时间
   name: W_CentralAfricaStandardTime
   fullName: W_CentralAfricaStandardTime
   langs:
@@ -1221,7 +1221,7 @@ items:
   type: field
   numericValue: "\"West Asia Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.WestBankStandardTime
-  summary: 西银行标准时间
+  summary: 西部银行标准时间
   name: WestBankStandardTime
   fullName: WestBankStandardTime
   langs:
@@ -1229,7 +1229,7 @@ items:
   type: field
   numericValue: "\"West Bank Standard Time\""
 - uid: Outlook_1_7.Office.MailboxEnums.RecurrenceTimeZone.WestPacificStandardTime
-  summary: 西太平洋标准时间
+  summary: 太平洋西部标准时间
   name: WestPacificStandardTime
   fullName: WestPacificStandardTime
   langs:
