--- a/docs/docs-ref-autogen/outlook_1_6/office.meetingsuggestion.yml
+++ b/docs/docs-ref-autogen/outlook_1_6/office.meetingsuggestion.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 5b5e93822d1085aaeba77f0acb55843043e87818
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
+ms.openlocfilehash: dca3db177d69cd5612591723d233691d3f154e3a
+ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29972906"
+ms.lasthandoff: 02/20/2019
+ms.locfileid: "30104910"
 items:
 - uid: Outlook_1_6.Office.MeetingSuggestion
   summary: >-
@@ -17,14 +17,11 @@ items:
     start 和 end 的值为包含建议会议的开始和结束日期和时间的 Date 对象的字符串表示形式。这些值用为当前用户指定的默认时区表示。
 
 
-    \[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
   remarks: >-
-    <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
+    <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr> </table>
 
-
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
-
-    ####示例
+    ####说明
 
 
     ```javascript
